# ExerciseGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Rakefile  SConstruct  TODO  rakefile
.build/soul/: BoundingBox.h  CollisionEvent.h  EntityManager.h  ModelManager.h  SConscript  TextureManager.h  misc.h
.build/tinyobj/: SConscript  sconscript
Shotgun/: popchar.py  popper.py  pullchars.py  pullpers.py  pullspells.py
Shotgun/chars/: Sister.json
Shotgun/pers/: Principality.json
assets/images/: Snowmobile_mat1_s.dds  oildrum_col.dds  oildrum_nor.dds
assets/shaders/: fragment.glsl  vertex.glsl
creator/: .gitignore  New.json  The Fourth God.json  action.py  build_instructions.txt  chargui.py  chars.json  creatures.py  data.json  gui.py  gui.spec  icon.icns  jsonTests.py  json_reader.py  license.txt  logictree.py  pergui.py  popup.py  qtgui.py  qtheader.py  qtmain.py  qtmainframe.py  qtmainframe.spec  qtop.py  qtslgui.py  simulate.py  slcontextgui.py  slgui.py  slinfo.py  sls.py  slview.py  supgui.py
creator/Backup test data files/: Jack Frost.json  Last Test.json  Minato Arisatou.json  Principality.json  PyQt Redundancy test.json  PyQt Test.json  Version 1 release.json  Void_link.json
creator/Unused and test files/: Fool_link.json  arcanaDescription.json  bgT.py  fusion.py  jsonTests.py  lspellwindow.py  persona.json  qtTest.py  qtTest.spec  slc.py  test.json  test.py  testheader.py
creator/data/: Aeon_link.json  Fool_link.json  Index placement test.json  Jack Frost.json  Orpheus.json  Power.json  Principality.json  PyQt Box Test.json  Void_link.json  data.json  pers.json
creator/int/: arcanaDescription.json  chars.json  data.json  pers.json
creator/lib/: chars.json  pers.json
creator/spec/: gui.spec  guiMac.spec  guiWin.spec
experimental/: CMakeLists.txt  ScriptEngine.cpp  exp.cpp  utils.cpp  utils.h
experimental/assets/images/: Snowmobile_mat1_d.dds  Snowmobile_mat1_n.dds  Snowmobile_mat4_d.dds  Snowmobile_mat6_d.dds
experimental/assets/models/: Snowmobile.mtl  ship.mtl  skybox.mtl
experimental/images/: Snowmobile_mat2_d.dds  Snowmobile_mat2_n.dds  Snowmobile_mat3_d.dds  Snowmobile_mat5_d.dds  ice.dds  white.dds
experimental/include/: BoundingBox.h  CollectibleObject.h  CollisionComponent.h  Entity.h  EntityManager.h  EventListener.h  GraphicsComponent.h  Handle.h  Handler.h  InstancedGraphicsComponent.h  ModelInstance.h  Player.h  ScriptEngine.h  Texture.h  boundingbox.h  entity.h  handler.h  misc.h  model.h
experimental/include/systems/: CollisionSystem.h  GraphicSystem.h  System.h  base.h  collisions.h  graphics.h
experimental/shaders/: fragment.glsl  vertex.glsl
experimental/src/: BoundingBox.cpp  CollectibleObject.cpp  CollisionComponent.cpp  CollisionSystem.cpp  Entity.cpp  EntityManager.cpp  GraphicSystem.cpp  GraphicsComponent.cpp  InstancedGraphicsComponent.cpp  ModelManager.cpp  Player.cpp  ScriptEngine.cpp  Shader.cpp  TextureManager.cpp  boundingbox.cpp  collisions.cpp  entity.cpp  exp.cpp  graphics.cpp  misc.cpp
experimental/temp/: ScriptEngine.cpp  ScriptEngine.h
include/: config.h  misc.h
include/collisions/: BoundingBox.h  CollisionComponent.h  CollisionSystem.h
include/entities/: Entity.h  EntityManager.h
include/graphics/: GraphicSystem.h  GraphicsComponent.h  Mesh.h  Model.h  Shader.h
include/position/: PositionSystem.h
include/scripting/: ScriptingSystem.h
model/framework/: battle.lua  context_template.lua  fusioncalculator.lua  gamestate.lua  hereisthemap.json  json_reader.lua  link.lua  map.lua  newgame.lua  popup.lua  shop.lua  shopmenus.json  test.lua  (+4 more)
notes/: README.txt  aa.txt  event_generation  glew_mingw  pyglet_source.txt
scripts/: cxx.rb  engine.lua  game.lua
src/: BoundingBox.cpp  CollisionSystem.cpp  EntityManager.cpp  EntityManager.h  GraphicSystem.cpp  GraphicsComponent.cpp  GraphicsComponent.h  Handle.h  Light.h  Model.h  ModelInstance.h  MovementEventListener.h  SConscript  Shader.h  System.h  TextureManager.cpp  config.h  exp.cpp  main.cpp  misc.cpp
(+52 files in other folders)
